--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "version": "0.2",
     "requires" : ["pandas"],
     "dumper" : {
-        "data_url" : ["https://filesender.renater.fr/download.php?token=6894c787-ac47-487c-8175-050856e830ee&files_ids=4119843"],
+        "data_url" : ["https://srv-store6.gofile.io/download/zLFPQw/drugLabels.zip"],
         "uncompress" : false
     },
     "uploader" : {
