--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "version": "0.2",
     "requires" : ["pandas"],
     "dumper" : {
-        "data_url" : ["https://github.com/mlebeur/testingdepositdata/blob/main/var_drug_ann.tsv"],
+        "data_url" : ["https://raw.githubusercontent.com/mlebeur/testingdepositdata/main/var_drug_ann.tsv"],
         "uncompress" : false
     },
     "uploader" : {
